--- a/css/style.css
+++ b/css/style.css
@@ -309,19 +309,19 @@ footer {
 }
 
 .contact-text a {
-  text-decoration: none; /* Remover o sublinhado */
-  color: inherit; /* Mantém a cor do ícone no link */
+  text-decoration: none;
+  color: inherit; 
 }
 
 @media (max-width: 768px) {
   .contact-item {
-    font-size: 1.4rem; /* Ajustei para manter a consistência */
+    font-size: 1.4rem; 
   }
 }
 
 @media (max-width: 480px) {
   .contact-item {
-    font-size: 1.2rem; /* Ajustei o tamanho para telas pequenas */
+    font-size: 1.2rem; 
   }
 }
 
@@ -332,7 +332,7 @@ footer {
   }
 
   .contact-item {
-    font-size: 1.4rem; /* Consistência para tela maior */
+    font-size: 1.4rem; 
   }
 }
 
